# tec

./: .gitignore  CHANGELOG  CHANGELOG.txt  CITATION  Constants.py  Electrode.py  LICENSE  MANIFEST  Makefile  NEAElectrode.py  README  README.md  README.txt  __init__.py  api.html  check_output_current_density.py  conftest.py  dimensionlesslangmuirpoissonsoln.py  electrode.py  electrodeapitest.py  electrodemethodtest.py  genindex.html  index.html  m1.py  models.html  numerics.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tec.py  tec_langmuir.py  tec_langmuir_docstring.py  tec_neac.py  tox.ini
_sources/: index.txt
conda.recipe/: build.sh  meta.yaml
doc/: Library.rst  Makefile  Scripting.rst  Testing.rst  api.rst  bib.bib  conf.py  electrode.rst  examples.ipynb  index.rst  install.rst  models.rst  numerics.rst  quickstart.rst
electrode/: __init__.py  constants.py  electrode.py  semiconductor.py
tec/: __init__.py  base.py  constants.py  dimensionlesslangmuirpoissonsoln.py  electrode.py  io.py  tec.py  tec_langmuir.py  version.py
test/: Electrode.calc_saturation_current_STANDARD.py  Electrode.calc_vacuum_energy_STANDARD.py  TEC.calc_back_current_density_STANDARD.py  TEC.calc_contact_potential_STANDARD.py  TEC.calc_forward_current_density_STANDARD.ipynb  TEC.calc_forward_current_density_STANDARD.py  TEC.calc_interelectrode_spacing_STANDARD.py  TEC.calc_output_current_density_STANDARD.py  TEC.calc_output_voltage_STANDARD.py  TEC_Langmuir_temporary_STANDARD.py  TEC_temporary_STANDARD.py  conftest.py  electrodeapitest.py  (+27 more)
(+34 files in other folders)
